cilkrts_api: fix linker flag by adding -fuse-ld=gold so it can work around the gcc-5 bug about __cpu_model

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,7 +2,7 @@
 CILKRTS_PATH=../../intel-cilk-runtime-install
 
 INCLUDE_FLAGS = -I${CILKRTS_PATH}/include
-LIB_FLAGS = -L${CILKRTS_PATH}/lib -lcilkrts -ldl
+LIB_FLAGS = -L${CILKRTS_PATH}/lib -lcilkrts -ldl -fuse-ld=gold
 
 GCC=gcc
 #GCC=/opt/gcc-5.3.0-install/bin/gcc
